--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             <p>BENVENUTO DI NUOVO.KARIBU TENA</p>
 
             <hr class="socket">
-         &copy; Site created by Jerry Nabango
+                Site created by Jerry Nabango
                 YUMMY PIZZA COMPANY<br>
                 P.O BOX: 999666,Nairobi,Kenya.<br>
-                Copyright(c)2020.All rights reserved.     
+                Copyright&copy;2020.All rights reserved.     
         </footer>
 
     </div>
